--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "sass": "^1.57.1",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5"
   },
